Fix resource url overflow in group page
Long resource urls didn't brake properly in chrome browser.

--- a/themes/openstack_bootstrap/custom-sass/style.scss
+++ b/themes/openstack_bootstrap/custom-sass/style.scss
@@ -252,6 +252,7 @@
     a {
       color: #30739C;
       text-decoration: underline;
+      @include word-break(break-all);
     }
   }
   .pane-node-group-group {
